arquivo index atualizado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a id="texto-icone" class="navbar-brand" href="index.html"><img class="icone" src="air.svg" alt=""> airgamma</a>
+        <a id="texto-icone" class="navbar-brand" href="index.html"><img class="icone" src="imagens/air.svg" alt=""> airgamma</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
